# libseccomp-rs

./: Cargo.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json  postCreate.sh
libseccomp/: Cargo.toml  notes.md
libseccomp-gen/: Cargo.toml  build.rs
libseccomp-gen/include/: seccomp.h.in  wrapper.h
libseccomp-sys/: Cargo.toml  build.rs
libseccomp/src/: lib.rs  notify.rs
libseccomp/tests/: notify.rs
