[package]
name = "libseccomp-gen"
description = "Raw generated FFI Bindings for the libseccomp Library."
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.65.0"
