[package]
name = "libseccomp"
version.workspace = true
edition.workspace = true
description = "Rust Language Bindings for the libseccomp Library"
repository = "https://github.com/libseccomp-rs/libseccomp-rs"

[dependencies]
bitflags = "2.1.0"
cfg-if = { version = "1.0.0", optional = true }
libc = "0.2.108"
libseccomp-sys.workspace = true

[features]
const-syscall = ["cfg-if"]
